# tapwarden

./: CHANGELOG.md  Cargo.toml  README.md  config.yaml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/: agent.rs  authorizer.rs  config.rs  daemon.rs  doctor.rs  keychain.rs  main.rs  runtime_paths.rs  secret_source.rs  setup.rs  vaultwarden.rs
